--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  app:
+  spider-panel:
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,5 +11,10 @@ services:
       - .env
     ports:
       - "8090:8090"
-    command: "/docker-gs-ping serve"
+    networks:
+      - spider-vpn-network
     restart: "always"
+
+networks:
+  spider-vpn-network:
+    external: true
