--- a/.air.toml
+++ b/.air.toml
@@ -3,9 +3,10 @@ root = "."
 tmp_dir = "tmp"
 
 [build]
-cmd = "go run main.go serve --http="
+cmd = "go run main.go serve --http=${APP_HOST}:${APP_PORT}"
 bin = "tmp/main"
 full_bin = "false"
+kill_before = "true"
 
 [watch]
 # Watch all .go files
