--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,12 +7,16 @@ on:
     paths:
       - "*"
 
+env:
+  DAY_OF_WEEK: Monday
+  TEST: HEy
+
 jobs:
   invite:
     runs-on: ubuntu-latest
     steps:
       - name: Check env
-        run: echo "address is ${{env.REMOTE_SERVER_USERNAME}}@${{env.REMOTE_SERVER_ADDRESS}}"
+        run: echo "${{env.TEST}} address is ${{ env.REMOTE_SERVER_USERNAME }}@${{ env.REMOTE_SERVER_ADDRESS }}"
 
   deploy:
     runs-on: ubuntu-latest
