feat: check envs

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,13 +14,14 @@ env:
 jobs:
   invite:
     runs-on: ubuntu-latest
+    environment: "production"
     steps:
       - name: Check env
-        run: echo "${{env.TEST}} address is ${{ env.REMOTE_SERVER_USERNAME }}@${{ env.REMOTE_SERVER_ADDRESS }}"
+        run: echo "${{env.TEST}} address is ${{ vars.REMOTE_SERVER_USERNAME }}@${{ vars.REMOTE_SERVER_ADDRESS }}"
 
   deploy:
     runs-on: ubuntu-latest
-
+    environment: "production"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
