--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROJECT_NAME: spider-vpn-dasboard
-      DIR_PATH: /opt/src/spider/$PROJECT_NAME
+      DIR_PATH: /opt/src/spider/spider-vpn-dasboard
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
